# DNARetrace

./: .gitattributes  README.md
GenerateData/FastLabelbyKISS/: CMakeLists.txt  abc.py  fm.cpp  testfmindex.py
GenerateData/FastLabelbyKISS/experiment/submodules/parallel-divsufsort/: .gitmodules  CMakeLists.txt
GenerateData/FastLabelbyKISS/experiment/submodules/parallel-divsufsort/examples/: CMakeLists.txt
GenerateData/FastLabelbyKISS/include/biovoltron/algo/align/exact_match/: fm_index2.hpp  fmindex.cpp
GenerateData/FastLabelbyKISS/src/: test.cpp
GenerateData/GenomeGraphDataGeneratebyLJA/: README.md
GenerateData/build_graph/build_graph/: FM_genome_build_debruijn_graph.py  assembly.py  assembly_genome.py  build_debruijn_graph.py  chr_build_debruijn_graph.py  deBruijnGraph.py  gengerate_node_egde.py  genome_build_debruijn_graph.py  handle_seq.py  imports.py  label_for_edges.py  mul_genome_build_debruijn_graph.py  new_build_debruijn_graph.py  read_graph.py  run_bcalm.py
Module/: __init__.py  graph_dataset.py  hyperparameters.py  train.py  utils.py
Module/checkpoints/ONT/checkpoints/: best_model.pth  info.json
Module/layers/: EigenGNN.py  __init__.py  fftKAN.py  gatlayer.py  kan_layer.py  position_encoding.py  processor.py  score_predictor.py
Module/models/: FocalLoss.py  LayerWiseDiceFocalLoss.py  __init__.py  full_graph.py  gate_gcn.py  resgated_multidigraph.py
TestData/ONT/data/seq/: data_0.fasta  data_1.fasta  data_2.fasta  data_3.fasta  data_4.fasta  data_5.fasta  data_6.fasta  data_7.fasta  data_8.fasta  data_9.fasta  reference_0.fasta  reference_1.fasta  reference_2.fasta  reference_3.fasta  reference_4.fasta  reference_5.fasta  reference_6.fasta  reference_7.fasta  reference_8.fasta  reference_9.fasta
